<?xml version="1.0"?>
<package format="3">
  <name>gazebo_sfm_plugin</name>
  <version>1.0.0</version>
  <description>Gazebo插件，实现基于社交力模型的行人运动仿真</description>

  <maintainer email="winter@todo.todo">winter</maintainer>
  <maintainer email="yang_haodong@buaa.edu.cn">Yang Haodong</maintainer>
  <license>GPL3</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 运行时接口依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ROS2依赖 -->
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 系统依赖 -->
  <depend>gazebo</depend>
  <depend>lightsfm</depend>
  <depend>libboost-thread-dev</depend>

  <!-- 声明此包包含接口定义 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ROS2导出格式 -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Gazebo插件路径配置 -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>